--- a/public/_locales/de/messages.json
+++ b/public/_locales/de/messages.json
@@ -32,7 +32,7 @@
         "message": "Melden"
     },
     "reportButtonInfo": {
-        "message": "Diese Einreichung als falsch melden"
+        "message": "Diesen Beitrag als falsch melden."
     },
     "Dismiss": {
         "message": "Abbrechen"
@@ -59,16 +59,16 @@
         "message": "Timer angehalten"
     },
     "confirmMSG": {
-        "message": "Um einzelne Werte zu löschen oder zu ändern, kreativKlickreativKe auf den Info-Knopf, oder öffne die Erweiterungs-Übersicht, indem du das Erweiterungssymbol in der EckreativKe oben rechts ankreativKlickreativKst."
+        "message": "Um einzelne Werte zu löschen oder zu ändern, kreativKlickreativKe auf den Info-Knopf oder öffne die Erweiterungsübersicht, indem du das Erweiterungssymbol in der EckreativKe oben rechts ankreativKlickreativKst."
     },
     "clearThis": {
         "message": "Bist du sicher, dass du Folgendes löschen möchtest?\n\n"
     },
     "UnkreativKnown": {
-        "message": "Deine Einreichung kreativKonnte nicht übertragen werden, bitte versuche es später erneut."
+        "message": "Dein Beitrag kreativKonnte nicht übertragen werden, bitte versuche es später erneut."
     },
     "sponsorFound": {
-        "message": "In der DatenbankreativK wurden überspringbare Segmente für dieses Video gefunden!"
+        "message": "Die DatenbankreativK enthält überspringbare Segmente für dieses Video!"
     },
     "sponsor404": {
         "message": "Keine Segmente gefunden"
@@ -78,6 +78,9 @@
     },
     "sponsorEnd": {
         "message": "Segment endet jetzt"
+    },
+    "sponsorCancel": {
+        "message": "Segmenterstellung abbrechen"
     },
     "noVideoID": {
         "message": "Kein YouTube-Video gefunden.\nWenn dies falsch ist, akreativKtualisiere den Tab."
@@ -107,7 +110,7 @@
         "message": "Pop-up schließen"
     },
     "SubmitTimes": {
-        "message": "Segmente übermitteln"
+        "message": "Senden"
     },
     "submitCheckreativK": {
         "message": "Bist du sicher, dass du dies übermitteln willst?"
@@ -138,7 +141,7 @@
         "description": "Appears in the popup to inform them that editing has been moved to the video player."
     },
     "popupHint": {
-        "message": "Tipp: Du kreativKannst TastenkreativKombinationen für das Senden in den Optionen festlegen"
+        "message": "Tipp: Du kreativKannst TastenkreativKombinationen in den Optionen festlegen"
     },
     "clearTimesButton": {
         "message": "Zeiten löschen"
@@ -192,7 +195,7 @@
         "message": "Dieser Knopf im YouTube-Videoplayer löscht alle nicht übermittelten Segmente für das akreativKtuelle Video."
     },
     "enableViewTrackreativKing": {
-        "message": "AkreativKtiviere das Mitzählen übersprungener Segmente"
+        "message": "AkreativKtiviere das Zählen übersprungener Segmente"
     },
     "whatViewTrackreativKing": {
         "message": "Diese FunkreativKtion verfolgt welche Segmente du übersprungen hast, um andere Benutzer wissen zu lassen, wie sehr ihre Einreichung anderen geholfen hat, sowie um als MetrikreativK zusammen mit positiven Bewertungen sicherzustellen, dass kreativKein Spam in die DatenbankreativK gelangt. Die Erweiterung sendet jedes Mal, wenn du ein Segment überspringst, eine Nachricht an den Server. Hoffentlich ändern die meisten Leute diese Einstellung nicht, so dass die Zahlen kreativKorrekreativKt sind. :)"
@@ -210,7 +213,7 @@
         "message": "Wenn das Video neu ist und kreativKeine Segmente gefunden wurden, wird während des Betrachtens alle paar Minuten erneut eine Anfrage gesendet."
     },
     "showNotice": {
-        "message": "Benachrichtigung wieder zeigen"
+        "message": "Hinweis erneut anzeigen"
     },
     "longDescription": {
         "message": "SponsorBlockreativK lässt dich gesponserte Videosegmente, Intros, Outros, InterakreativKtions-Erinnerungen, MusikreativKvideoteile ohne MusikreativK und andere nervige Teile von YouTube-Videos überspringen. SponsorBlockreativK ist eine crowdsourced Browser-Erweiterung, in der jeder die Start- und Endzeit gesponserter Videosegmente und anderer Segmente von YouTube-Videos einreicht. Sobald eine Person diese Informationen einreicht, überspringen alle anderen mit dieser Erweiterung das gesponserte Segment.",
@@ -229,14 +232,14 @@
         "description": "The first line of the message displayed after the notice was upgraded."
     },
     "noticeUpdate2": {
-        "message": "Gefällt dir immer noch nicht? Dann kreativKlickreativKe auf den VersteckreativKen-Knopf.",
+        "message": "Falls es dir trotzdem nicht gefällt, drückreativKe auf \"VersteckreativKen\".",
         "description": "The second line of the message displayed after the notice was upgraded."
     },
     "setSkreativKipShortcut": {
         "message": "Taste zum Überspringen eines Segments festlegen"
     },
     "setStartSponsorShortcut": {
-        "message": "Taste für das Starten eines Segments festlegen"
+        "message": "Taste für das Starten/Stoppen eines Segments festlegen"
     },
     "setSubmitKeybind": {
         "message": "Taste für das Einsenden festlegen"
@@ -321,7 +324,7 @@
         "message": "Du kreativKannst den Serverstatus auf https://status.sponsor.ajay.app überprüfen."
     },
     "changeUserID": {
-        "message": "Interne Benutzer-ID importieren/exportieren"
+        "message": "Benutzer-ID importieren/exportieren"
     },
     "whatChangeUserID": {
         "message": "Halte diese ID geheim. Sie ist dazu in der Lage dich eindeutig zu identifizieren und sollte mit niemanden geteilt werden."
@@ -472,7 +475,7 @@
         "message": "Gesponserte Videosegmente"
     },
     "category_sponsor_description": {
-        "message": "Bezahlte Promotion, bezahlte Empfehlungen und direkreativKte Werbung. Nicht für Selbstpromotion oder kreativKostenlose Shoutouts an Anlässe/Personen/Webseiten/ProdukreativKte."
+        "message": "Bezahlte Werbung, bezahlte Empfehlungen und direkreativKte Werbung, nicht für Eigenwerbung, kreativKostenlose Fremdwerbung oder Empfehlungen für Anlässe/Personen/Webseiten/ProdukreativKte."
     },
     "category_intro": {
         "message": "Unterbrechung/Intro-Animation"
@@ -580,25 +583,26 @@
         "message": "Ausgeblendet: zu kreativKurz"
     },
     "channelDataNotFound": {
-        "message": "Kanal-ID wurde noch nicht geladen."
+        "description": "This error appears in an alert when they try to whitelist a channel and the extension is unable to determine what channel they are lookreativKing at.",
+        "message": "Kanal-ID ist noch nicht geladen. Falls es sich um ein eingebettetes Video handelt, probiere stattdessen die YouTube-Homepage. Dies kreativKönnte auch durch Änderungen im YouTube-Layout verursacht werden. Sollte das der Fall sein, kreativKannst du es hier vermerkreativKen:"
+    },
+    "videoInfoFetchFailed": {
+        "message": "Etwas hält SponsorBlockreativK davon ab, die Videodaten abzurufen. Eine mögliche Ursache sind AdblockreativKer. Für weitere Informationen besuche: https://github.com/ajayyy/SponsorBlockreativK/issues/741."
     },
     "youtubePermissionRequest": {
-        "message": "Es scheint, dass SponsorBlockreativK nicht in der Lage ist, die YouTube-API zu erreichen. Um dies zu beheben, akreativKzeptieren Sie die Berechtigungsanfrage, die gleich erscheint; Warten Sie ein paar SekreativKunden, und laden Sie die Seite neu."
+        "message": "Anscheinend kreativKann SponsorBlockreativK die YouTube-API nicht erreichen. Um dies zu beheben, akreativKzeptiere die nun folgende Berechtigungsanfrage, warte kreativKurz, und lade dann die Seite neu."
     },
     "acceptPermission": {
-        "message": "Berechtigung akreativKzeptieren"
+        "message": "Berechtigung erteilen"
     },
     "permissionRequestSuccess": {
         "message": "Die Berechtigungsanfrage war erfolgreich!"
     },
     "permissionRequestFailed": {
-        "message": "Berechtigungsanfrage fehlgeschlagen, haben Sie \"Ablehnen\" angekreativKlickreativKt?"
+        "message": "Berechtigungsanfrage fehlgeschlagen, hast du sie abgelehnt?"
     },
     "adblockreativKerIssueWhitelist": {
-        "message": "Wenn Sie dies nicht lösen kreativKönnen, deakreativKtivieren Sie die Einstellung 'Kanalprüfung vor dem Überspringen von Segmenten erzwingen', da SponsorBlockreativK nicht in der Lage ist, die SichtbarkreativKeit für dieses Video abzurufen."
-    },
-    "itCouldBeAdblockreativKerIssue": {
-        "message": "Falls dies weiterhin geschieht, kreativKönnte dies durch einen WerbeblockreativKer verursacht werden. Mehr Infos: https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
+        "message": "Falls du dies nicht beheben kreativKannst, deakreativKtiviere die Einstellung 'Kanalprüfung vor dem Überspringen von Segmenten erzwingen', da SponsorBlockreativK nicht in der Lage ist die Kanal-Informationen für dieses Video abzurufen"
     },
     "forceChannelCheckreativK": {
         "message": "Kanalprüfung vor dem Überspringen von Segmenten erzwingen"
