--- a/public/_locales/hr/messages.json
+++ b/public/_locales/hr/messages.json
@@ -122,9 +122,62 @@
     "submitTimesButton": {
         "message": "Unesi vremena"
     },
+    "Username": {
+        "message": "KorisničkreativKo ime"
+    },
+    "setUsername": {
+        "message": "Postavi kreativKorisničkreativKo ime"
+    },
+    "Options": {
+        "message": "Opcije"
+    },
+    "website": {
+        "message": "Web-stranica",
+        "description": "Used on Firefox Store Page"
+    },
+    "sourceCode": {
+        "message": "Izvorni kreativKod",
+        "description": "Used on Firefox Store Page"
+    },
+    "disableSkreativKipping": {
+        "message": "PreskreativKakreativKanje je akreativKtivirano"
+    },
+    "enableSkreativKipping": {
+        "message": "PreskreativKakreativKanje je deakreativKtivirano"
+    },
     "yourWorkreativK": {
         "message": "Tvoja slanja",
         "description": "Used to describe the section that will show you the statistics from your submissions."
+    },
+    "errorCode": {
+        "message": "Kȏd greškreativKe: "
+    },
+    "skreativKip": {
+        "message": "PreskreativKoči"
+    },
+    "skreativKip_category": {
+        "message": "PreskreativKočiti {0}?"
+    },
+    "skreativKipped": {
+        "message": "PreskreativKočeno"
+    },
+    "disableAutoSkreativKip": {
+        "message": "DeakreativKtiviraj automatskreativKo preskreativKakreativKanje"
+    },
+    "enableAutoSkreativKip": {
+        "message": "AkreativKtiviraj automatskreativKo preskreativKakreativKanje"
+    },
+    "minLower": {
+        "message": "min"
+    },
+    "minsLower": {
+        "message": "min"
+    },
+    "hourLower": {
+        "message": "h"
+    },
+    "hoursLower": {
+        "message": "h"
     },
     "whatChangeUserID": {
         "message": "Ovo bi trebalo ostati privatno. slično je lozinkreativKi i ne bi se smjelo dijeliti ni s kreativKime. AkreativKo netkreativKo ovo ima, mogu se lažno predstavljati kreativKao ti."
@@ -183,11 +236,35 @@
     "minDurationDescription": {
         "message": "Isječci kreativKraći od postavljene vrijednosti neće biti preskreativKočeni ili prikreativKazani u playeru."
     },
+    "save": {
+        "message": "Spremi"
+    },
+    "reset": {
+        "message": "Resetiraj"
+    },
+    "setOptions": {
+        "message": "Postavi opcije"
+    },
     "confirmNoticeTitle": {
         "message": "Pošalji segment"
     },
     "submit": {
         "message": "Pošalji"
+    },
+    "cancel": {
+        "message": "Odustani"
+    },
+    "delete": {
+        "message": "Izbriši"
+    },
+    "preview": {
+        "message": "Pregledaj"
+    },
+    "inspect": {
+        "message": "Provjeri"
+    },
+    "edit": {
+        "message": "Uredi"
     },
     "category_sponsor": {
         "message": "Sponzor"
@@ -228,8 +305,37 @@
     "manualSkreativKip": {
         "message": "Ručno preskreativKakreativKanje"
     },
+    "previewColor": {
+        "message": "Boja pregleda",
+        "description": "Referring to submissions that have not been sent to the server yet."
+    },
+    "category": {
+        "message": "Kategorija"
+    },
+    "skreativKipOption": {
+        "message": "PreskreativKoči opciju",
+        "description": "Used on the options page to describe the ways to skreativKip the segment (auto skreativKip, manual, etc.)"
+    },
+    "brackreativKetNow": {
+        "message": "(sada)"
+    },
+    "moreCategories": {
+        "message": "Više kreativKategorija"
+    },
+    "chooseACategory": {
+        "message": "Odaberi kreativKategoriju"
+    },
     "youMustSelectACategory": {
         "message": "Moraš odabrati kreativKategoriju za sve segmente kreativKoje šalješ!"
+    },
+    "brackreativKetEnd": {
+        "message": "(kreativKraj)"
+    },
+    "downvoteDescription": {
+        "message": "Neispravno/kreativKrivo vrijeme"
+    },
+    "incorrectCategory": {
+        "message": "Kriva kreativKategorija"
     },
     "nonMusicCategoryOnMusic": {
         "message": "Ovaj je video kreativKategoriziran kreativKao glazba. Je li stvarno ima sponzora? AkreativKo je ovo zapravo „Ne-glazbeni segment”, otvori opcije proširenja i akreativKtiviraj ovu kreativKategoriju. Zatim ovaj segment možeš posalti kreativKao „Ne-glazbeni” umjesto sponzora. Pročitaj smjernice akreativKo nešto nije jasno."
